--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.21.3"
   }
 }
