--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,16 @@
   "author": "Nada ISSA",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1"
   }
 }
