--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
