--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.2.0",
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
