--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
     "fs": "^0.0.1-security",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
